Fixing post alignment

--- a/wp-content/themes/norcal-sbdc/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/style.css
@@ -19490,11 +19490,11 @@ nav.pagination {
     .wp-block-crown-blocks-post-index article.type-post {
       padding: 0 1rem 2rem; } }
   @media (min-width: 1200px) {
-    .wp-block-crown-blocks-post-index article.type-post:nth-child(4), .wp-block-crown-blocks-post-index article.type-post:nth-child(5) {
+    .wp-block-crown-blocks-post-index article.type-post:nth-child(4):not(:last-child), .wp-block-crown-blocks-post-index article.type-post:nth-child(5) {
       width: 50%; }
-      .wp-block-crown-blocks-post-index article.type-post:nth-child(4) .entry-featured-image, .wp-block-crown-blocks-post-index article.type-post:nth-child(5) .entry-featured-image {
+      .wp-block-crown-blocks-post-index article.type-post:nth-child(4):not(:last-child) .entry-featured-image, .wp-block-crown-blocks-post-index article.type-post:nth-child(5) .entry-featured-image {
         display: none; }
-        .wp-block-crown-blocks-post-index article.type-post:nth-child(4) .entry-featured-image + .entry-teaser, .wp-block-crown-blocks-post-index article.type-post:nth-child(5) .entry-featured-image + .entry-teaser {
+        .wp-block-crown-blocks-post-index article.type-post:nth-child(4):not(:last-child) .entry-featured-image + .entry-teaser, .wp-block-crown-blocks-post-index article.type-post:nth-child(5) .entry-featured-image + .entry-teaser {
           width: 100%;
           -webkit-box-pack: start;
               -ms-flex-pack: start;
